small fixes to nav bar spacing and footer link

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  min-height: 8vh;
+  min-height: 4vh;
   display: flex;
   flex-direction: column;
 }
